force-app/main/default/objects/Menu_Item__c/fields/Availability__c.field-meta.xml
<CustomField>
  <fullName>Availability__c</fullName>
  <label>Availability</label>
  <type>Checkbox</type>
  <defaultValue>true</defaultValue>
</CustomField>