force-app/main/default/objects/Menu_Item__c/fields/Category__c.field-meta.xml
<CustomField>
  <fullName>Category__c</fullName>
  <label>Category</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>Appetizer</fullName>
      </value>
      <value>
        <fullName>Entrée</fullName>
      </value>
      <value>
        <fullName>Dessert</fullName>
      </value>
      <value>
        <fullName>Beverage</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>