force-app/main/default/objects/Menu_Item__c/fields/Description__c.field-meta.xml
<CustomField>
  <fullName>Description__c</fullName>
  <label>Description</label>
  <type>LongTextArea</type>
  <length>1000</length>
</CustomField>